# my-rag-agent

./: .gitignore  MISTAKE.md  README.md  pyproject.toml
config/: settings.yaml.example
scripts/: start.sh  start_dashboard.sh  stop.sh
specs/: minimal-modular-rag-project.md
src/: __init__.py
src/agent/: __init__.py  contracts.py  dependencies.py  registry.py  state.py  tools.py  workflows.py
src/application/: __init__.py  answer_service.py  document_service.py  ingest_service.py  search_service.py
src/core/: __init__.py  errors.py  settings.py  trace.py  types.py
src/evaluation/: __init__.py  answer_eval.py  fixtures.py  models.py  retrieval_eval.py  runtime.py
src/ingestion/: __init__.py  models.py  pipeline.py
src/interfaces/: __init__.py
src/observability/: __init__.py  logger.py  trace_reader.py  trace_store.py
src/response/: __init__.py  answer_builder.py  response_builder.py
src/retrieval/: fusion.py  query_processor.py  sparse_retriever.py
tests/e2e/: test_agent_cli.py  test_chat_session.py  test_cli_mvp.py  test_dashboard_smoke.py  test_mcp_client.py  test_mcp_smoke.py  test_recall_regression.py  test_start_stop_scripts.py
tests/integration/: test_agent_workflow.py  test_answer_quality_regression.py  test_chroma_store_roundtrip.py  test_document_lifecycle.py  test_eval_regression.py  test_hybrid_search.py  test_ingest_query_mvp.py  test_mcp_server.py  test_pdf_ingestion.py  test_pdf_preview.py  test_query_with_generation.py  test_real_answer_flow.py  test_reranker_fallback.py  test_trace_cli_errors.py  test_trace_explorer.py  (+1 more)
(+120 files in other folders)
